# webpage_printtool

./: .gitignore  LICENSE  README.md
CROS/: RequestTest.http  apitest.http  test.html  test1.html
Server-Browser/: CMakeLists.txt  main.cpp  printdatabase.cpp  printdatabase.h  printmsgstation.cpp  slwebsoc.cpp  slwebsoc.h  webprinter.cpp  webprinter.h  websoc.cpp  websoc.h
Server-Browser/.cache/clangd/index/: main.cpp.D619B1FE92597C8F.idx  printcontroller.cpp.7E1E31DB0219B8AA.idx  printcontroller.h.949F0F9D00AE5AD7.idx  printdatabase.cpp.CB9E5E4A858B645D.idx  printdatabase.h.644F97E431FC8D56.idx  printmsgstation.cpp.C372DF7D3E2EF780.idx  printmsgstation.h.7604D4961846A347.idx  printwebsocket.cpp.742EF07EC85F72E2.idx  printwebsocket.h.9F5FB333D6629D55.idx  slwebsoc.cpp.0EB7CD5C8A525894.idx  slwebsoc.h.F2AC5994CA8820CC.idx  webprinter.cpp.32BB1E5CA97AB948.idx  webprinter.h.2DC170679C9F43F1.idx
Server-Browser/server/: printcontroller.cpp  printcontroller.h  printwebsocket.cpp
WebTool/: package-lock.json  package.json
WebTool/src/: App.vue  main.js
WebTool/src/components/: MarkDownBody.vue  about.vue  config.vue  configModal.vue
WebTool/src/components/router/: index.js
server/: CMakeLists.txt  CMakeLists.txt.user.daa49f1  PrinterInfo.db  base.h  data.h  main.cpp  printdatabase.cpp  printmsgstation.h  websoc.h
server/data_sqlite/: printdatabase.cpp  printdatabase.h
server/gui/: bg.qrc  movewidget.cpp  movewidget.h  printwidget.cpp  printwidget.h  printwidget.ui
server/net_interface/: clientwebsocket.cpp  clientwebsocket.h  printcontroller.cpp  printcontroller.h  printwebsocket.cpp  printwebsocket.h  websoc.h
server/printer/: printmsgstation.cpp  printmsgstation.h  webprinter.cpp  webprinter.h
server/server/: printwebsocket.h
service/webprint/: Program.cs  Worker.cs  webprint.csproj
service/webprint/Properties/: launchSettings.json
test/: AddOnePrintConfig.json  DelOnePrintConfig.json  GetPrintConfigs.json  GetPrintInfo.json  GetPrintedPages.json  GetWebsocketUrl.json  InsertOrUpdateWebsocketUrl.json  ToPrint.json  UpdateOnePrintConfig.json  http.html  package-lock.json  result.json  websoc_server.js
webtool/: apitest.http  index.html  package-lock.json  package.json  test.html
webtool/src/: App.vue  main.js
webtool/src/assets/styles/: font.css
webtool/src/components/: MarkDownAnchor.vue  about.vue  config.vue  configModal.vue  readme.js  websocket.js
webtool/src/components/about/: MarkDownAnchor.vue  MarkDownBody.vue  about.vue  readme.js
webtool/src/components/router/: index.js
(+5 files in other folders)
